2008-01-28 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/MarkerReport.py: fix bug #1669 with None type cmp

2008-01-30 Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_GuiOptions.py:
	Intelligent selection of default family for family option in reports.

2008-01-30 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/FilterEditor/_FilterEditor.py: pylint fixes and 
	work on 0001660: Title for all Edit Filter windows not translated correctly 

2008-01-30  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/FilterEditor/_EditFilter.py: self.space --> self.namespace
	* src/FilterEditor/_FilterEditor.py: self.space --> self.namespace
	* src/FilterEditor/_EditRule.py: self.space --> self.namespace
	* src/FilterEditor/_ShowResults.py: self.space --> self.namespace
	* src/plugins/ExportVCalendar.py: pylint fixes
	* src/PluginUtils/_Tool.py: pylint fixes
	* src/Filters/_FilterParser.py: cleanup
	* src/Filters/_GenericFilter.py: doc fix
	* src/Filters/Rules/Person/_Everyone.py
	* src/ManagedWindow.py: doc fix

2008-01-29 Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_GuiOptions.py: Default GuiOptions to use active person.

2008-01-29 Brian Matherly <brian@gramps-project.org>
	* src/docgen.ODFDoc.py: escape characters in image names for ODF output.

2008-01-29  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/ViewManager.py: 0001641: add ... ellipsis to menu items. 
	* src/plugins/Calendar.py: 0001641: add ... ellipsis to menu items. 
	* src/PluginUtils/__init__.py: pep8 fixes
	* src/PluginUtils/_PluginMgr.py: pylint and doc fixes

2008-01-29 Peter Landgren <peter.talken@telia.com>
	* src/plugins/ExportVCalendar.py: 
	* src/plugins/ExportVCard.py:
	Encoding according to sys.getfilesystemencoding() in stead of hardcoded 
	iso-8859-1

2008-01-29  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/plugins/EventNames.py: doc fixes and removal of self.label

2008-01-29 Gary Burton <gary.burton@zen.co.uk>